[package]
name = "attpc_envoy"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.28.1"
egui_extras = "0.28.1"
egui_plot = "0.28.1"
human_bytes = "0.4.3"
native-dialog = { version = "0.7.0", features = ["windows_dpi_awareness"] }
quick-xml = { version = "0.36.1", features = ["serialize"] }
reqwest = "0.12.5"
serde = "1.0.204"
serde_yaml = "0.9.34"
tokio = { version = "1.39.2", features = ["sync", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
