[package]
name = "attpc_envoy"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.30.0"
egui_extras = "0.30.0"
egui_plot = "0.30.0"
human_bytes = "0.4.3"
quick-xml = { version = "0.37.1", features = ["serialize"] }
reqwest = { version = "0.12.9", features = ["json"] }
rfd = "0.15.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
serde_yaml = "0.9.34"
tokio = { version = "1.42.0", features = ["sync", "rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"
