[package]
name = "attpc_envoy"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.29.1"
egui_extras = "0.30.0"
egui_plot = "0.29.0"
human_bytes = "0.4.3"
quick-xml = { version = "0.37.1", features = ["serialize"] }
reqwest = "0.12.9"
rfd = "0.15.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.43.0", features = ["sync", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
